live-2-bnfc/Calcc/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Calcc.Par where
import qualified Calcc.Abs
import Calcc.Lex
}

%name pExp Exp
%name pExp1 Exp1
%name pExp2 Exp2
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '*' { PT _ (TS _ 3) }
  '+' { PT _ (TS _ 4) }
  '-' { PT _ (TS _ 5) }
  '/' { PT _ (TS _ 6) }
  L_integ  { PT _ (TI $$) }

%%

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

Exp :: { Calcc.Abs.Exp }
Exp : Exp '+' Exp1 { Calcc.Abs.EAdd $1 $3 }
    | Exp '-' Exp1 { Calcc.Abs.ESub $1 $3 }
    | Exp1 { $1 }

Exp1 :: { Calcc.Abs.Exp }
Exp1 : Exp1 '*' Exp2 { Calcc.Abs.EMul $1 $3 }
     | Exp1 '/' Exp2 { Calcc.Abs.EDiv $1 $3 }
     | Exp2 { $1 }

Exp2 :: { Calcc.Abs.Exp }
Exp2 : Integer { Calcc.Abs.EInt $1 } | '(' Exp ')' { $2 }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
